...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ic_goBack"
        app:layout_constraintBottom_toTopOf="@+id/IV_User_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BTN_Review"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/IV_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contextClickable="true"
        android:onClick="editDetails"
        android:contentDescription="@string/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/IV_Back"
...
        android:id="@+id/SV_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/BTN_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTN_Review"
        app:layout_constraintVertical_bias="0.32">

        <LinearLayout
            android:id="@+id/detailsLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:textColor="@color/BLACK" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:textColor="@color/BLACK" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
...
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:textColor="@color/BLACK" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_txt_layout"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
...
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_txt_layout"
                android:visibility="gone">


                <EditText
                    android:id="@+id/ET_workerReviewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:paddingStart="45dp"
                    android:paddingEnd="25dp"
...
        app:layout_constraintEnd_toEndOf="@+id/BTN_Details"
        app:layout_constraintStart_toStartOf="@+id/BTN_Details"
        app:layout_constraintTop_toTopOf="@+id/BTN_submit"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BTN_addReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addReviewWorker"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/IV_User_Image"
...
