...
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_searchWorkerQuery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_txt_layout"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
...
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/BLACK" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BTN_submitSearchWorkerQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            android:padding="10dp"
            android:text="@string/Submit" />
...
